--- a/config/locales/devise.fr.yml
+++ b/config/locales/devise.fr.yml
@@ -18,6 +18,7 @@ fr:
       unauthenticated: "Vous devez vous connecter ou vous inscrire pour continuer."
       unconfirmed: "Vous devez valider votre compte pour continuer."
       locked: "Votre compte est verrouillé."
+      not_found_in_database: "Identifiant ou mot de passe incorrect."
       invalid: "Identifiant ou mot de passe incorrect."
       invalid_token: "Jeton d'authentification incorrect."
       timeout: "Votre session est expirée, veuillez vous reconnecter pour continuer."
